reorganise App and fix @font-face

--- a/app/style/chrispowell.css
+++ b/app/style/chrispowell.css
@@ -1,17 +1,21 @@
 @font-face {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 400;
-  src: url('/fonts/raleway_thin-webfont.eot') url('/fonts/raleway_thin-webfont.svg') url('/fonts/raleway_thin-webfont.ttf') url('/fonts/raleway_thin-webfont.woff');
+  font-family: Raleway;
+  src: url('/fonts/raleway_thin-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/raleway_thin-webfont.svg') format('svg'),
+    url('/fonts/raleway_thin-webfont.ttf') format('truetype'),
+    url('/fonts/raleway_thin-webfont.woff') format('woff');
 }
 
 @font-face {
-  font-family: 'Goudy';
+  font-family: 'Goudy Bookletter 1911';
   font-style: normal;
   font-weight: 400;
-  src: url('/fonts/goudy_bookletter_1911-webfont.eot') url('/fonts/goudy_bookletter_1911-webfont.svg') url('/fonts/goudy_bookletter_1911-webfont.ttf') url('/fonts/goudy_bookletter_1911-webfont.woff');
+  src: url('/fonts/goudy_bookletter_1911-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/fonts/goudy_bookletter_1911-webfont.svg') format('svg'),
+    url('/fonts/goudy_bookletter_1911-webfont.ttf') format('truetype'),
+    url('/fonts/goudy_bookletter_1911-webfont.woff') format('woff');
 }
 
 body {
-  font-family: 'Goudy';
+  font-family: 'Goudy Bookletter 1911';
 }
