--- a/app/style/chrispowell.scss
+++ b/app/style/chrispowell.scss
@@ -19,3 +19,43 @@
 body {
   font-family: 'Goudy Bookletter 1911';
 }
+
+header, section {
+  padding: .25em .5em;
+}
+
+header {
+  h1 {
+    display: inline-block;
+  }
+
+  p {
+    color: #AAA;
+    display: inline-block;
+    margin-left: 1em;
+  }
+}
+
+nav {
+  border-top: 1px solid #AAA;
+  border-bottom: 1px solid #AAA;
+}
+
+ul.horizontal {
+  margin: 0 -.5em;
+  padding: 0;
+}
+
+ul.horizontal li {
+  text-align: center;
+  padding: .25em 1em;
+  display: inline-block;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
