--- a/themes/chrisipowell/layouts/partials/footer.html
+++ b/themes/chrisipowell/layouts/partials/footer.html
@@ -7,10 +7,7 @@
             {{- if isset $.Site.Author .id }}
               <li>
                 <a href="{{ printf .url (index $.Site.Author .id) }}" title="{{ .title }}">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa {{ .icon }} fa-stack-1x fa-inverse"></i>
-                  </span>
+                    <i class="fa {{ .icon }} fa-lg"></i>
                 </a>
               </li>
             {{- end -}}
@@ -18,10 +15,7 @@
           {{ if .Site.Params.rss }}
           <li>
             <a href="{{ .Site.BaseURL}}/index.xml" title="RSS">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
-              </span>
+                <i class="fa fa-rss fa-lg"></i>
             </a>
           </li>
           {{ end }}
@@ -30,11 +24,6 @@
           {{ .Site.Author.name }}
           &nbsp;&bull;&nbsp;
           {{ .Site.LastChange.Format "2006" }}
-
-          {{ if .Site.Title }}
-            &nbsp;&bull;&nbsp;
-            <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
-          {{ end }}
         </p>
         <!-- Please don't remove this, keep my open source work credited :) -->
         <p class="credits theme-by text-muted">
