--- a/src/layout/footer/Footer.scss
+++ b/src/layout/footer/Footer.scss
@@ -5,4 +5,11 @@ footer {
     @extend .bt;
     @extend .black-60;
     @extend .mt4;
+    @extend .cf;
+    @extend .relative;
+    @extend .w-100;
+
+
+    bottom: 0;
+    
 }
