Add social icons to the footer and update higlighting

--- a/src/layout/nav/Nav.scss
+++ b/src/layout/nav/Nav.scss
@@ -20,5 +20,5 @@ nav.main a {
     @extend .pa3;
     @extend .black-80;
     @extend .bg-animate;
-    @extend .hover-bg-light-blue;
+    @extend .hover-light-blue;
 }
