--- a/src/layout/page/Page.scss
+++ b/src/layout/page/Page.scss
@@ -4,6 +4,8 @@
     @extend .tl;
     @extend .relative;
     @extend .cf;
+    @extend .pl3;
+    @extend .pr3;
 
     &-header h2 {
         @extend .f3;
