--- a/src/layout/footer/Footer.scss
+++ b/src/layout/footer/Footer.scss
@@ -1,7 +1,7 @@
 @import '../../../node_modules/tachyons-sass/tachyons.scss';
 
 footer {
-    @extend .f6;
+    @extend .f5;
     @extend .bt;
     @extend .black-60;
     @extend .mt4;
@@ -9,7 +9,34 @@ footer {
     @extend .relative;
     @extend .w-100;
 
-
     bottom: 0;
-    
+ 
+    ul.contact {
+        @extend .flex;
+        @extend .center;
+        @extend .mw5;
+        @extend .pa0;
+
+        li {
+            list-style: none;
+            @extend .w-33;
+            @extend .ml1;
+            @extend .mr1;
+
+            svg {
+                @extend .h2;
+                fill: rgba(0, 0, 0, 0.6);
+                transition: fill 200ms ease-in;
+            }
+
+            svg:hover{
+                transition: fill 200ms ease-in;
+                fill: #96ccff;
+            }
+
+            a {
+                @extend .link;
+            }
+        }
+    }
 }
