--- a/src/components/blog/article/BlogArticle.scss
+++ b/src/components/blog/article/BlogArticle.scss
@@ -6,3 +6,27 @@
 
     @extend .pl3;
 }
+
+.blog-article h2.subtitle {
+    border-left: 3px solid gray;
+
+    @extend .i;
+    @extend .f5;
+
+    margin-top: -0.5em;
+    margin-bottom: 1.5em;
+
+    padding-left: 1em;  
+}
+
+.blog-article .author {
+    font-style: normal;
+    font-weight: bold;
+}
+
+.blog-article .updated {
+    font-style: normal;
+    font-weight: lighter;
+
+    color: gray;
+}
