Blog Posts with proper sections

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 body {
-  margin: 1em;
-  font-family: 'Helvetica Neue',
+  font-family: 'Ink Free', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  padding: 0.5em;
 }
 
 code {
@@ -17,4 +18,23 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+  h1, h2, h3, h4, h5, p, div {
+    text-align: center;
+  }
+  
+  ul {
+    list-style: none;
+  }
+
+  li::after {
+    display: block;
+    content: "-";
+  }
+
+  li:last-child::after {
+    display: none;
+  }
 }
