--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -1,3 +1,7 @@
 .footer {
+    position: relative;
     font-size: 0.8rem;
+    background: rgba(255, 255, 255, 0.6);
+    margin: 0;
+    padding: 0.5em 0;
 }
