--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 body {
-  font-family: 'Ink Free', 'Helvetica Neue',
+  font-family: 'Ink Free', 'Bradley Hand', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font-size: 14pt;
 
   padding: 0.5em;
 }
@@ -27,6 +29,12 @@ a:hover {
   
   ul {
     list-style: none;
+    margin: 1em 0em;
+    padding: 0;
+  }
+
+  li {
+    display: block;
   }
 
   li::after {
